@@ -14,6 +14,7 @@ Mantis ChangeLog
  * Fix #3537: Rewriting custom values with 0 when updating a bug.
  * Fix #3539: Simple view page shows advanced custom fields.
  * Fix #3541: link to documentation wrong.
+ * Fix #3572: The summary_graph_imp_* pages have shortcut PHP tags.
  * Languages: Updated Norwegian localisation.
  * Mantis website moved to http://www.mantisbt.org
 
